[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Art/Sprites/gridpiece.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/pricedown bl.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/UI/ItemUI.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Pickup_Coin17.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Pickup_Coin18.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_color = Color( 0.74902, 0.823529, 0.219608, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "SpawnIn"
tracks/0/type = "bezier"
tracks/0/path = NodePath("group:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("group:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -500, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("group:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Item UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_right = -8.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="group" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -383.552 )

[node name="Sprite" type="Sprite" parent="group"]
position = Vector2( 520, 268.75 )
scale = Vector2( 0.5, 536.5 )
texture = SubResource( 2 )

[node name="HelpText" type="Label" parent="group"]
margin_left = 352.0
margin_top = 457.0
margin_right = 678.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 3 )
text = "Press [ENTER] to Receive
Press [BACKSPACE] to Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsLeft" type="Label" parent="group"]
margin_left = 792.0
margin_top = 473.0
margin_right = 1024.0
margin_bottom = 548.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.94902, 1, 0.0392157, 1 )
text = "X more Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemText" type="Label" parent="group"]
margin_left = 264.0
margin_top = 9.0
margin_right = 590.0
margin_bottom = 84.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 3 )
text = "PRIMARY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionText" type="Label" parent="group"]
margin_left = 200.0
margin_top = 65.0
margin_right = 940.0
margin_bottom = 140.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 3 )
text = "Description"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="group"]
position = Vector2( 497, 290 )
scale = Vector2( 11.3125, 9.4375 )
texture = ExtResource( 1 )

[node name="ItemPicture" type="Sprite" parent="group"]
position = Vector2( 496, 289 )
scale = Vector2( 7, 6.99219 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/SpawnIn = SubResource( 4 )

[node name="AcceptSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -31.301
attenuation = 0.00634572

[node name="DeclineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -22.214
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="finished" from="AcceptSound" to="." method="_on_Sound_finished"]
[connection signal="finished" from="DeclineSound" to="." method="_on_DeclineSound_finished"]
